AC_INIT([mpdmacs], [1.0.0], [sp1ff@poboxcom], [mpdmacs], [https://github.com/sp1ff/mpdmacs])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([mpdmacs.el])
AM_INIT_AUTOMAKE([-Wall -Werror gnits std-options dist-xz dist-zstd])

AM_PATH_LISPDIR

AC_CONFIG_FILES([Makefile doc/Makefile test/Makefile])
AC_OUTPUT
